--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-three/fiber": "^8.17.10",
     "@types/react-beautiful-dnd": "^13.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -57,7 +58,7 @@
     "react-dropzone": "^14.3.3",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.6",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.27.0",
     "recharts": "^2.13.3",
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
